# DatumDock

./: .gitattributes  .gitignore  .pre-commit-config.yaml  AGENTS.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  datumdock.spec  pyproject.toml  requirements.txt
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/workflows/: windows-quality.yml
assets/brand/: README.md
assets/icons/: README.md
docs/: ACCEPTANCE.md  ANNOTATION_WORKFLOW.md  ARCHITECTURE.md  BUILD_WINDOWS.md  CODE_STYLE.md  DATASET_LIBRARY.md  IMAGE_POOL.md  PRD.md  README.md  ROADMAP.md  STABILIZATION_AUDIT.md  UI_INVENTORY.md  UI_REVIEW.md  UX.md  VISUAL_DESIGN.md  X_ANYLABELING_BASELINE.md  X_ANYLABELING_INTEROP.md  YOLO_EXPORT.md
installer/: DatumDock.iss  version_info.txt
scripts/: build.ps1  capture_a08_review.py  capture_canvas_followup_review.py  capture_canvas_pointer_review.py  capture_recent_corrections.py  capture_step2_review.py  capture_step3_review.py  capture_step4_review.py  capture_step5_review.py  capture_step6_review.py  validate_ultralytics_export.py
src/datumdock/: __init__.py  __main__.py  app.py  resources.py
src/datumdock/domain/: __init__.py  models.py
src/datumdock/i18n/: __init__.py  catalog.py  prototype_catalog.py
src/datumdock/services/: __init__.py  annotation_debug.py  annotations.py  backup.py  dataset.py  dataset_deletion.py  dataset_library.py  exporting.py  image_pool.py  interop.py  labelme.py  labels.py  library_repository.py  managed_interop.py  managed_labels.py  managed_yolo.py  models.py  quality.py  recent_labels.py  sample_governance.py  sample_repository.py  settings.py  shortcuts.py  storage.py  tasks.py  workspace.py
src/datumdock/ui/: __init__.py  annotation_canvas.py  annotation_workspace.py  application_shell.py  components.py  dataset_deletion_dialog.py  icons.py  label_manager.py  main_window.py  managed_gateway.py  managed_governance_pages.py  managed_interop_dialogs.py  managed_label_pages.py  managed_media_dialogs.py  managed_sample_model.py  managed_yolo_dialog.py  model_manager.py  preview_canvas.py  prototype_dialogs.py  prototype_gateway.py  prototype_models.py  prototype_pages.py  quick_label_dialog.py  sample_browser.py  similarity_dialog.py  theme.py  trash_dialog.py
tests/: conftest.py  test_a08_usability.py  test_annotation_debug_log.py  test_canvas_dpi_subprocess.py  test_canvas_followups.py  test_dataset_deletion.py  test_dataset_workflow.py  test_documentation.py  test_gui_smoke.py  test_interop_backup_and_labels.py  test_managed_domain_validation.py  test_managed_library.py  test_project_configuration.py  test_quality.py  test_recent_label_reassignment.py  test_resources.py  test_shortcuts.py  test_step2_qtbot.py  test_step3_image_import.py  test_step3_managed_ui.py  test_step3_recovery_tasks.py  test_step3_sample_governance.py  test_step3_sample_repository.py  test_step4_annotations.py  test_step4_labels_and_schema.py  test_step4_managed_ui.py  test_step4_scale_and_isolation.py  test_step5_managed_interop.py  test_step6_yolo_export.py  test_ui_prototype.py
