[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "datumdock"
version = "0.1.0"
description = "本地优先的视觉数据集管理与标注桌面应用"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "License pending" }
authors = [{ name = "DatumDock Contributors" }]
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Environment :: Win32 (MS Windows)",
    "Intended Audience :: Developers",
    "Natural Language :: Chinese (Simplified)",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Image Processing",
]
dependencies = []

[project.optional-dependencies]
dev = ["pre-commit", "pytest", "pytest-qt", "ruff"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
target-version = "py311"
line-length = 100
extend-exclude = ["build", "dist"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "RUF"]

[tool.ruff.lint.isort]
known-first-party = ["datumdock"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "lf"
skip-magic-trailing-comma = false
docstring-code-format = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = ["-ra"]
