[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "datumdock"
version = "0.1.0"
description = "本地优先的视觉数据集管理与标注桌面应用"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "DatumDock Contributors" }]
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Environment :: Win32 (MS Windows)",
    "Intended Audience :: Developers",
    "Natural Language :: Chinese (Simplified)",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Image Processing",
]
dependencies = [
    "PySide6>=6.8,<7",
    "Pillow>=10.4",
    "Pydantic>=2.9",
    "PyYAML>=6.0",
]

[project.optional-dependencies]
inference = [
    "onnx>=1.17",
    "onnxruntime>=1.20",
    "ultralytics>=8.3",
]
dev = ["pre-commit", "pyinstaller", "pytest", "pytest-cov", "pytest-qt", "ruff"]

[project.scripts]
datumdock = "datumdock.app:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
target-version = "py311"
line-length = 100
extend-exclude = ["build", "dist"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "RUF"]
# 项目要求中文注释；中文全角标点不应被误判为可疑 Unicode。
ignore = ["RUF001", "RUF002", "RUF003"]

[tool.ruff.lint.isort]
known-first-party = ["datumdock"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "lf"
skip-magic-trailing-comma = false
docstring-code-format = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = ["-ra"]
pythonpath = ["src"]

[tool.coverage.run]
branch = true
source = ["datumdock"]

[tool.coverage.report]
show_missing = true
skip_covered = true
exclude_also = [
    "if TYPE_CHECKING:",
    "if __name__ == .__main__.:",
]
